# nix-jettison

./: Cargo.toml  README.md  clippy.toml  crate-hashes.json  flake.nix
bindings/nix-bindings/: Cargo.toml
bindings/nix-bindings-constants/: Cargo.toml
bindings/nix-bindings-constants/src/: lib.rs
bindings/nix-bindings-cpp/: Cargo.toml  build.rs
bindings/nix-bindings-cpp/cpp/: wrapper.cpp
bindings/nix-bindings-cpp/src/: lib.rs
bindings/nix-bindings-macros/: Cargo.toml
bindings/nix-bindings-macros/src/: args.rs  attrset.rs  attrset_derive.rs  lib.rs  try_from_value.rs  value.rs
bindings/nix-bindings-sys/: Cargo.toml  build.rs
bindings/nix-bindings-sys/src/: lib.rs
bindings/nix-bindings/src/: attrset.rs  context.rs  error.rs  lib.rs  list.rs  namespace.rs  primop.rs  thunk.rs  value.rs
crates/nix-bindings/: Cargo.toml  build.rs
crates/nix-bindings-c/: Cargo.toml  build.rs
crates/nix-bindings-cpp/: Cargo.toml  build.rs
crates/nix-bindings-cpp/cpp/: wrapper.cpp
crates/nix-bindings-cpp/src/: lib.rs
crates/nix-bindings-macros/: Cargo.toml
crates/nix-bindings-macros/src/: args.rs  attrset.rs  attrset_derive.rs  entry.rs  lib.rs  list.rs  primop.rs  try_from_value.rs
crates/nix-bindings-sys/: Cargo.toml  build.rs
crates/nix-bindings-sys/src/: lib.rs
crates/nix-bindings/src/: attrset.rs  builtins.rs  callable.rs  context.rs  entry.rs  error.rs  function.rs  lib.rs  list.rs  namespace.rs  primop.rs  thunk.rs  utf8_cstr.rs  value.rs
crates/nix-jettison/: Cargo.toml  build.rs
crates/nix-jettison/src/: build_crate.rs  build_crate_args.rs  build_package.rs  cargo_lock_parser.rs  jettison.rs  lib.rs  resolve_build_graph.rs  vendor_deps.rs
nix/: common.nix  lib.nix  module.nix  packages.nix  packages2.nix  repl.nix  shell.nix
src/: build_crate_args.rs  build_graph.rs  build_lib.rs  build_node_args.rs  build_node_attrs.rs  build_package.rs  cargo_lock_parser.rs  jettison.rs  lib.rs  make_derivation.rs  make_derivation_args.rs  parse-build-script-output.sh  resolve_build_graph.rs  vendor_deps.rs
