[workspace]
members = ["bindings/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Riccardo Mazzarini <me@noib3.dev>"]
license = "MIT"

[workspace.dependencies]
# Third-party dependencies.
anyhow = "1"
bindgen = "0.72"
cargo = { version = "0.92", default-features = false }
cargo-util-schemas = "0.10"
cauchy = { git = "https://github.com/nomad/cauchy.git" }
cc = "1"
compact_str = "0.9"
derive_more = { version = "2", default-features = false, features = [
  "display",
] }
doxygen-bindgen = "0.1"
either = { version = "1", default-features = false }
indoc = "2"
memchr = "2"
percent-encoding = "2"
pkg-config = "0.3"
proc-macro2 = "1"
quote = "1"
syn = "2"

# Internal dependencies.
nix-bindings = { path = "./bindings/nix-bindings" }
nix-bindings-cpp = { path = "./bindings/nix-bindings-cpp" }
nix-bindings-macros = { path = "./bindings/nix-bindings-macros" }
nix-bindings-sys = { path = "./bindings/nix-bindings-sys" }

[workspace.lints.clippy]
alloc_instead_of_core = "warn"
bool_to_int_with_if = "deny"
cognitive_complexity = "deny"
let_underscore_future = "allow"
module_inception = "allow"
multiple_crate_versions = "deny"
needless_collect = "deny"
same_name_method = "deny"
std_instead_of_core = "warn"
too_many_arguments = "deny"
too_many_lines = "deny"
trivially_copy_pass_by_ref = "warn"
undocumented_unsafe_blocks = "deny"
unwrap_used = "deny"
use_self = "warn"
wildcard_dependencies = "deny"
wildcard_imports = "warn"

[workspace.lints.rust]
future_incompatible = { level = "deny", priority = -1 }
missing_docs = "deny"
nonstandard_style = { level = "deny", priority = -1 }
refining_impl_trait = { level = "allow", priority = -1 }
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(nightly)"] }

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"

[package]
name = "nix-jettison"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false
rust-version = "1.91"

[features]
# TODO: make this default once https://github.com/NixOS/nixpkgs/pull/469594 is
# merged and included in a stable Nixpkgs release.
forbid-cargo = []

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
cargo = { workspace = true, default-features = true }
cargo-util-schemas = { workspace = true }
cauchy = { workspace = true }
compact_str = { workspace = true }
derive_more = { workspace = true }
either = { workspace = true }
indoc = { workspace = true }
memchr = { workspace = true }
nix-bindings = { workspace = true, features = ["compact_str", "either", "std"] }
percent-encoding = { workspace = true }

[lints]
workspace = true
