[package]
name = "nix-bindings-cpp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
nix-bindings-sys = { workspace = true }

[build-dependencies]
cc = { workspace = true }
pkg-config = { workspace = true }

[lints]
workspace = true
