[package]
name = "nix-bindings-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
nix-bindings-constants = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }

[lints]
workspace = true
