[package]
name = "nix-bindings-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[build-dependencies]
bindgen = { workspace = true }
doxygen-bindgen = { workspace = true }
pkg-config = { workspace = true }

[lints]
workspace = true
