[package]
name = "nix-bindings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
compact_str = ["dep:compact_str"]
either = ["dep:either"]
smallvec = ["dep:smallvec"]
std = []

[dependencies]
nix-bindings-cpp = { workspace = true }
nix-bindings-macros = { workspace = true }
nix-bindings-sys = { workspace = true }

compact_str = { workspace = true, optional = true }
either = { workspace = true, optional = true }
smallvec = { workspace = true, optional = true }

[build-dependencies]
rustc_version = "0.4"

[lints]
workspace = true
