[package]
name = "nix-bindings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
std = []

[dependencies]
nix-bindings-cpp = { workspace = true }
nix-bindings-macros = { workspace = true }
nix-bindings-sys = { workspace = true }

[lints]
workspace = true
