[package]
name = "nix-jettison"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
cargo = { workspace = true, default-features = true }
derive_more = { workspace = true }
nix-bindings = { workspace = true, features = ["std"] }

[lints]
workspace = true
