[package]
name = "nix-jettison"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
cargo = { workspace = true, default-features = true }
cauchy = { workspace = true }
compact_str = { workspace = true }
derive_more = { workspace = true }
either = { workspace = true }
nix-bindings = { workspace = true, features = ["compact_str", "either", "std"] }
semver = { workspace = true }

[lints]
workspace = true
